--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -39,6 +39,12 @@
   urldate = {2023-05-03}
 }
 
+@online{rosHistory,
+  title = {{ROS History}},
+  url = {https://www.theconstructsim.com/history-ros/},
+  urldate = {2022-12-23}
+}
+
 @manual{timovyProjekt,
   author = {{Bc. Marek Pacalaj, Bc. Tomáš Kútik, Bc. Dominik Gula, Bc. Dávid Pavlič, Bc. Daniel Ďurkovič}},
   title = {Mobilný podstavec pre robota},
