--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -45,6 +45,12 @@
   urldate = {2022-12-23}
 }
 
+@online{ElectronicDesign,
+  title = {{ElectronicDesign}},
+  url = {https://www.electronicdesign.com/markets/automation/article/21258792/realtime-innovations-rti-ros-and-dds-making-the-most-out-of-your-software-framework},
+  urldate = {2023-05-07}
+}
+
 @manual{timovyProjekt,
   author = {{Bc. Marek Pacalaj, Bc. Tomáš Kútik, Bc. Dominik Gula, Bc. Dávid Pavlič, Bc. Daniel Ďurkovič}},
   title = {Mobilný podstavec pre robota},
