tech: ros_control
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -12,7 +12,6 @@
 @ONLINE{chatgpt,
   title = {{ChatGPT}},
   url = {https://chat.openai.com/chat},
-  urldate = {2022-12-24}
 }
 
 @ONLINE{RosDoc,
@@ -48,6 +47,12 @@
 @online{ElectronicDesign,
   title = {{ElectronicDesign}},
   url = {https://www.electronicdesign.com/markets/automation/article/21258792/realtime-innovations-rti-ros-and-dds-making-the-most-out-of-your-software-framework},
+  urldate = {2023-05-07}
+}
+
+@online{siteTrend,
+  title = {{Trend}},
+  url = {https://www.trendmicro.com/vinfo/us/security/news/cybercrime-and-digital-threats/analyzing-the-data-distribution-service-dds-protocol-for-critical-industries},
   urldate = {2023-05-07}
 }
 
