usage: more usage options
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/usage.tex
+++ b/includes/usage.tex
@@ -14,11 +14,16 @@ už~dokončená a~my môžeme tieto kódy len jednoducho pripojiť k~programu. M
 \begin{itemize}
 	\item \textbf{Manuálne ovládanie} Ovládanie pomocou
 		\begin{itemize}
-			\item \textbf{klávesnice} použitie uzlu \textit{teleop\_twist\_keyboard}
-			\item \textbf{joystick} použitie uzlu \textit{teleop\_twist\_joy}
-			\item \textbf{príkazov} skripty poprípade priame zadávanie príkazov do~konzoly
+			\item \textbf{klávesnice} použitie uzlu \textit{teleop\_twist\_keyboard},
+			\item \textbf{joystick} použitie uzlu \textit{teleop\_twist\_joy},
+			\item \textbf{príkazov} skripty poprípade priame zadávanie príkazov do~konzoly.
 		\end{itemize}
-	\item \textbf{Automatické ovládanie}
+	\item \textbf{Automatické ovládanie} Ovládanie pomocou
+		\begin{itemize}
+			\item \textbf{algoritmov} použitie algoritmov pre nájdenie najlepšej trasy,
+			\item \textbf{hlasu} použitie umelej inteligencie na pretvorenie hlasu na text,
+			\item \textbf{gestami} použitie počítačového videnia na detekciu pohybu užívateľa.
+		\end{itemize}
 \end{itemize}
 
 \subsection{Joystick}
