--- a/includes/technologie.tex
+++ b/includes/technologie.tex
@@ -52,7 +52,7 @@ robotoch. Nad~operačným systémom Windows má niekoľko výhod.
 		ktorý tvorí jeho základ, je k~dispozícii pre~všetkých zadarmo a~každý môže prispieť
 		k~jeho vylepšeniu. Tento otvorený prístup umožňuje programátorom prispôsobiť si Linux
 		pre~svoje potreby a~vytvárať programy, ktoré sú~optimálne pre~ich prácu. Na~Linuxe
-		sú~založené aj~operačné systémy reálneho času alebo software pre~smart mobilné telefóny
+		sú~založené aj~operačné systémy reálneho času alebo softvére pre~smart mobilné telefóny
 		ako je napríklad operačný systém Android.
 
 	\item \textbf{Programovacie nástroje} Linux obsahuje mnoho vynikajúcich programovacích nástrojov, ktoré sú~k~dispozícii
