supervisor_title: update
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/main.tex
+++ b/main.tex
@@ -15,8 +15,8 @@
 \FEIkeywords{ROS, BlackMetal, uzly, témy, služby, akcie}
 \FEIkeywordsEn{ROS, BlackMetal, nodes, topics, services, actions}
 \FEIregNr{FEI-100863-111124}
-\FEIsupervisor{Ing. Michal Dobiš}
-\FEIconsultant{Ing. Michal Dobiš}
+\FEIsupervisor{Ing. Michal Dobiš, PhD.}
+\FEIconsultant{Ing. Michal Dobiš, PhD.}
 \FEIdate{02}{06}{2023} % Date of submission (Day, month, year)
 \FEIstudyProgramme{Robotika a kybernetika}
 \FEIstudyProgrammeEn{Robotics and cybernetics}
