--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,8 @@
 \FEIauthor{Filip Lobpreis}
 \FEItitle{Vytvorenie Ovládača v prostredí ROS pre~mobilného robota}
 \FEItitleEn{Implementation of ROS Driver for Mobile Robot}
-\FEIkeywords{ROS, BlackMetal, uzly, témy, služby, akcie}
-\FEIkeywordsEn{ROS, BlackMetal, nodes, topics, services, actions}
+\FEIkeywords{ROS, ROS2, robot, klient, filter, ovládač, odometria}
+\FEIkeywordsEn{ROS, ROS2, robot, client, filter, driver, odometry}
 \FEIregNr{FEI-100863-111124}
 \FEIsupervisor{Ing. Michal Dobiš, PhD.}
 \FEIconsultant{Ing. Michal Dobiš, PhD.}
